HOP-4532 : Add an icon in the metadata selection lines to jump the perspective HOP-4533 : Allow the execution information viewers to be navigated HOP-4534 : Create a zoom-to-fit-screen option HOP-4539 : Hop web should have SVG icons